--- a/brumstaxi/res/values/color.xml
+++ b/brumstaxi/res/values/color.xml
@@ -8,5 +8,6 @@
      <color name="lightorange">#FFB180</color>
       <color name="darckorange">#FF6600</color>
       <color name="lightbalck">#4E4E4E</color>
+      <color name="taxiNum">#FFCA00</color>
     
 </resources>
